==> danilocoletto/ESP32-Based-Embedded-Potentiostat-Extension-Board/Software/ESP32_Firmware/PotentiostatV2_Firmware/components/ADS1255/ads1255.c <==
#include "ads1255.h"
#define ADS_TIMEOUT_TABLE_SIZE                      (sizeof(ADS_TIMEOUT_TABLE)/sizeof(ADS125X_timeout_t))
#define ADS_PROPAGATION_DELAY_TABLE_SIZE            (sizeof(ADS_PROPAGATION_DELAY_TABLE)/sizeof(ADS125X_prop_delay_t))

void ADS125X_Init(ADS125X_t *ads, uint8_t drate, uint8_t gain, uint8_t buffer_en)
{
  bool found = false;

  ads->hspix = init_spi_bus();      // Inicializar SPI y ADS
  ads->pga = 1 << gain;
  ads->current_drate = drate;

#ifdef GEN_CLOCK
  init_adc_clock(ads->oscFreq);
#endif

  ADS125X_Config_Pins();
  ADS125X_CMD_Send(ads, ADS125X_CMD_RESET);
  // This freeze the CPU for 5ms.
  esp_rom_delay_us(5000);
  ADS125X_CMD_Send(ads, ADS125X_CMD_SDATAC);

#ifdef DEBUG_ADS1255
  uint8_t tmp[5]; // buffer
  ADS125X_Register_Read(ads, ADS125X_REG_STATUS, tmp, 1);
  printf("STATUS: %#.2x\n", tmp[0]);
#endif

  // enable clockout | ADS125X_PGA1
  ADS125X_Register_Write(ads, ADS125X_REG_ADCON, ADS125X_CLKOUT_1 | gain); // enable clockout = clkin/1
#ifdef DEBUG_ADS1255
  ADS125X_Register_Read(ads, ADS125X_REG_ADCON, tmp, 1);
  printf("ADCON: %#.2x\n", tmp[0]);
#endif

  ADS125X_Register_Write(ads, ADS125X_REG_DRATE, drate);
#ifdef DEBUG_ADS1255
  ADS125X_Register_Read(ads, ADS125X_REG_DRATE, tmp, 1);
  printf("DRATE: %#.2x\n", tmp[0]);
#endif

  ADS125X_Register_Write(ads, ADS125X_REG_MUX, ADS125X_MUXP_AIN0 | ADS125X_MUXN_AINCOM); // mux, medir ADC
#ifdef DEBUG_ADS1255
  ADS125X_Register_Read(ads, ADS125X_REG_IO, tmp, 1);
  printf("IO   : %#.2x\n", tmp[0]);
#endif

  ADS125X_Register_Write(ads, ADS125X_REG_IO, 0x00); // all GPIOs are outputs (do not leave floating) - D0 is CLKOUT
#ifdef DEBUG_ADS1255
  ADS125X_Register_Read(ads, ADS125X_REG_IO, tmp, 1);
  printf("IO   : %#.2x\n", tmp[0]);
#endif

  ADS125X_CMD_Send(ads, ADS125X_CMD_SELFCAL);
  ADS125X_DRDY_Wait(ads); // wait ADS1256 to settle after self calibration

  // This propagation delay store in microseconds corresponds to the Settling Time (T18)
  // descripted in the Table 13 of the ADS1255 datasheet.
  for (int i = 0; i < ADS_PROPAGATION_DELAY_TABLE_SIZE; i++) 
  {
    if (ADS_PROPAGATION_DELAY_TABLE[i].reg_val == drate) 
    {
      ads->propagation_delay_us = ADS_PROPAGATION_DELAY_TABLE[i].propagation_delay_us;
      found = true;
      break;
    }
  }

  if (!found)
    printf("#ERR: Invalid ADC data rate specified.\n");

  return;
}

float ADS125X_ADC_ReadVolt(ADS125X_t *ads)
{
  uint8_t cmd = ADS125X_CMD_RDATA;
  uint8_t spiRx[3] = {0, 0, 0};
  uint8_t spiTxDummy[3] = {0xFF, 0xFF, 0xFF};
  esp_err_t ret;

  //Send transaction (Command)
  spi_transaction_t t_cmd;
  memset(&t_cmd, 0, sizeof(t_cmd));
  t_cmd.length = 8;             // 8 bits
  t_cmd.tx_buffer = &cmd;
  t_cmd.rx_buffer = NULL;       
    
  //Receive transaction (Data)
  spi_transaction_t t_read;
  memset(&t_read, 0, sizeof(t_read));
  t_read.length = 24;           // 24 bits
  t_read.rxlength = 24;
  t_read.tx_buffer = spiTxDummy;      
  t_read.rx_buffer = spiRx;

	// --- Communication Init ---
  ADS125X_CS(ads, ADS125X_ON); // CS Low (Select)

  // Send command RDTA. We use 'spi_device_trasnmit'
  //ret = spi_device_transmit(ads->hspix, &t_cmd);
  ret = spi_device_polling_transmit(ads->hspix, &t_cmd);
  if (ret != ESP_OK) 
  {
    ADS125X_CS(ads, ADS125X_OFF);
    return 0.0f; 
  }

  // Delay (t6 in datasheet ~7us). Figure 30.
  //esp_rom_delay_us(7);

  // Read 3 bytes
  //ret = spi_device_transmit(ads->hspix, &t_read);
  ret = spi_device_polling_transmit(ads->hspix, &t_read);

  ADS125X_CS(ads, ADS125X_OFF); // CS High (Deselect)
  // --- COMMUNICATION END ---

#ifdef DEBUG_ADS1255
    printf("RDATA: %#.2x%.2x%.2x\n", spiRx[0], spiRx[1], spiRx[2]);
#endif

  // --- CONVERSION AND MATH ---
    
  // Build the int32 (Big Endian)
  int32_t adsCode = (spiRx[0] << 16) | (spiRx[1] << 8) | (spiRx[2]);

  // Sign extension (Bit 23 is the sign)
  if(adsCode & 0x800000) 
  {
    adsCode |= 0xFF000000;
  }

  // Vout = (Code * 2 * Vref) / (PGA * 2^23 - 1) = PGA * 0x7fffff = 8388607.0f
  return ( (float)adsCode * (2.0f * ads->vref) ) / ( (float)ads->pga * 8388607.0f );
}

uint8_t ADS125X_Register_Read(ADS125X_t *ads, uint8_t reg, uint8_t* pData, uint8_t n)
{

  //Preparar el buffer de transmisión (Comando RREG)
    uint8_t spiTx[2];
    uint8_t spiTxDummy[1] = {0xFF};
    spiTx[0] = ADS125X_CMD_RREG | reg; // 1er byte: Comando | Dirección
    spiTx[1] = n - 1;                  // 2do byte: (Número de bytes a leer) - 1

    //Definir la transacción de ESCRITURA (Comando)
    spi_transaction_t t_cmd;
    memset(&t_cmd, 0, sizeof(t_cmd));
    t_cmd.length = 16;             // 2 bytes * 8 bits
    t_cmd.tx_buffer = spiTx;
    t_cmd.rx_buffer = NULL;

    //Definir la transacción de LECTURA (Datos)
    spi_transaction_t t_read;
    memset(&t_read, 0, sizeof(t_read));
    t_read.length = n * 8;         // n bytes * 8 bits
    t_read.rxlength = n * 8;
    t_read.tx_buffer = spiTxDummy;
    t_read.rx_buffer = pData;

    //ADS125X_CMD_Send(ads, ADS125X_CMD_SDATAC);

    // --- INICIO SECUENCIA ---
    ADS125X_CS(ads, ADS125X_ON); // Select

    // Esperar a que DRDY esté bajo (requerido por datasheet antes de enviar comandos si hay conversión activa)
    ADS125X_DRDY_Wait(ads);

    //Enviar comando (RREG + Count)
    // Usamos transmit (interrupción/bloqueo de tarea)
    spi_device_polling_transmit(ads->hspix, &t_cmd);
    //spi_device_transmit(ads->hspix, &t_cmd);

    // Delay t6 (Delay from Last SCLK to First SCLK of Read)
    // Datasheet: 50 * tCLKIN. Para 8MHz -> ~6.25us. Usamos 7us.
    esp_rom_delay_us(7);

    //Leer los datos del registro
    spi_device_polling_transmit(ads->hspix, &t_read);
    //spi_device_transmit(ads->hspix, &t_read);

    // Delay t11 (Delay Command Decode) - Opcional pero recomendado
    // Datasheet: 4 * tCLKIN (~0.5us). Ponemos 1us por seguridad antes de subir el CS.
    esp_rom_delay_us(1);

    ADS125X_CS(ads, ADS125X_OFF); // Deselect
    // --- FIN SECUENCIA ---

    return 0;
}

uint8_t ADS125X_Register_Write(ADS125X_t *ads, uint8_t reg, uint8_t data)
{

  // Prepare the 3-byte packet: [CMD | COUNT | DATA]
  uint8_t spiTx[3];
  spiTx[0] = ADS125X_CMD_WREG | reg; // 1st byte: Command + Register Address
  spiTx[1] = 0;                      // 2nd byte: (Number of bytes - 1). 0 means 1 byte.
  spiTx[2] = data;                   // 3rd byte: The payload

  // Define the SPI transaction
  spi_transaction_t t;
  memset(&t, 0, sizeof(t));
  t.length = 24;          // 3 bytes * 8 bits
  t.tx_buffer = spiTx;    // Pointer to data
  t.rx_buffer = NULL;     // We don't expect a response

  // --- START COMMUNICATION ---
  ADS125X_CS(ads, ADS125X_ON); // Select

  // Wait for DRDY to go low before sending WREG (Required by datasheet)
  ADS125X_DRDY_Wait(ads);

  // Send the packet
  spi_device_polling_transmit(ads->hspix, &t);

  // Delay t11 (Command Decode Delay). Datasheet requires 4 * tCLKIN (~0.5us). We use 1us for safety.
  esp_rom_delay_us(1);

  ADS125X_CS(ads, ADS125X_OFF); // Deselect
  // --- END COMMUNICATION ---

  return 0;
}

uint8_t ADS125X_CMD_Send(ADS125X_t *ads, uint8_t cmd)
{
    // Define the SPI transaction
    spi_transaction_t t;
    memset(&t, 0, sizeof(t));
    t.length = 8;               // 8 bits
    t.tx_buffer = &cmd;         // Pointer to the command byte
    t.rx_buffer = NULL;         // No response expected

    // --- START COMMUNICATION ---
    ADS125X_CS(ads, ADS125X_ON); // Select

    // Wait for DRDY (Required only before sending commands like SDATAC or RDATAC)
    if( cmd == ADS125X_CMD_RDATAC || cmd == ADS125X_CMD_SDATAC)
      ADS125X_DRDY_Wait(ads);

    // Send the command (Blocking/Yielding)
    spi_device_polling_transmit(ads->hspix, &t);

    // Delay t11 (Command Decode Delay). Minimal delay required is 4 * tCLKIN (~0.5us). We wait 1us to be safe.
    esp_rom_delay_us(1);

    ADS125X_CS(ads, ADS125X_OFF); // Deselect
    // --- END COMMUNICATION ---

    return 0;
}

uint8_t ADS125X_DRDY_Wait(ADS125X_t *ads) {
    // Timeout se selecciona automaticamente dependiendo del Settle Time del ADS1255 
    int32_t timeout_us = ADS125X_Get_Timeout_Us(ads->current_drate);
    int64_t t_start = esp_timer_get_time();     // Marca de tiempo (µs)
    while (gpio_get_level(ads->drdyPin) == 1) {
        if((esp_timer_get_time() - t_start) >= timeout_us) {
            ESP_LOGE("ADS125X", "Error: DRDY Timeout. El sensor no responde.");
            return 1; // Error
        }
    }
    return 0; // Éxito
}

uint8_t ADS125X_CS(ADS125X_t *ads, uint8_t state)
{
    char cs_state = 0;

    if(state) 
        cs_state = 0;
    else 
        cs_state= 1;

    gpio_set_level(ads->csPin, cs_state);
	return 0;
}
