==> danilocoletto/ESP32-Based-Embedded-Potentiostat-Extension-Board/Información/Datasheets - Components/ADS1255/ADS1255-master/src/ads1255.c <==
#include <stdint.h>
#include "ads1255.h"
#include <stdio.h>

uint8_t ADS125X_Init(ADS125X_t *ads, SPI_HandleTypeDef *hspi, uint8_t drate, uint8_t gain, uint8_t buffer_en)
{
  ads->hspix = hspi;
  ads->pga = 1 << gain;
	
	ADS125X_CS(ads, 1);
	ADS125X_CMD_Send(ads, ADS125X_CMD_RESET);
	HAL_Delay(5);
	ADS125X_CMD_Send(ads, ADS125X_CMD_SDATAC);
	
	uint8_t tmp[5]; // buffer
#ifdef DEBUG_ADS1255
	ADS125X_Register_Read(ads, ADS125X_REG_STATUS, tmp, 1);
	printf("STATUS: %#.2x\n", tmp[0]);
#endif
	
	// enable clockout | ADS125X_PGA1
	ADS125X_Register_Write(ads, ADS125X_REG_ADCON, ADS125X_CLKOUT_1 | gain);  // enable clockout = clkin/1
#ifdef DEBUG_ADS1255
	ADS125X_Register_Read(ads, ADS125X_REG_ADCON, tmp, 1);
	printf("ADCON: %#.2x\n", tmp[0]);
#endif

  ADS125X_Register_Write(ads, ADS125X_REG_DRATE, drate);
#ifdef DEBUG_ADS1255
	ADS125X_Register_Read(ads, ADS125X_REG_DRATE, tmp, 1);
	printf("DRATE: %#.2x\n", tmp[0]);
#endif

ADS125X_Register_Write(ads, ADS125X_REG_IO, 0x00); // all GPIOs are outputs (do not leave floating) - D0 is CLKOUT
#ifdef DEBUG_ADS1255
	ADS125X_Register_Read(ads, ADS125X_REG_IO, tmp, 1);
	printf("IO   : %#.2x\n", tmp[0]);
#endif

	ADS125X_CMD_Send(ads, ADS125X_CMD_SELFCAL);
	ADS125X_CS(ads, 0);
  ADS125X_DRDY_Wait(ads);  // wait ADS1256 to settle after self calibration
	
	return 0;
}

uint8_t ADS125X_DRDY_Wait(ADS125X_t *ads){
  while(HAL_GPIO_ReadPin(ads->drdyPort, ads->drdyPin) == GPIO_PIN_SET);
	return 0;
}

uint8_t ADS125X_CS(ADS125X_t *ads, uint8_t on)
{
  if(on) on = 0;
  else on = 1;
  HAL_GPIO_WritePin( ads->csPort, ads->csPin, on);
	return 0;
}

float ADS125X_ADC_ReadVolt (ADS125X_t *ads){
	uint8_t spiRx[3] = {0,0,0};
	spiRx[0] = ADS125X_CMD_RDATA;
	
	ADS125X_CS(ads, 1);
	HAL_SPI_Transmit(ads->hspix, spiRx, 1, 10);
	HAL_Delay(1);
	HAL_SPI_Receive(ads->hspix, spiRx, 3, 10);
	ADS125X_CS(ads, 0);
	
#ifdef DEBUG_ADS1255
	printf("RDATA: %#.2x%.2x%.2x\n", spiRx[0], spiRx[1], spiRx[2]);
#endif
	
	// must be signed integer for 2's complement to work
	int32_t adsCode = (spiRx[0] << 16) | (spiRx[1] << 8) | (spiRx[2]);
  if(adsCode & 0x800000) adsCode |= 0xff000000;  // fix 2's complement
	// do all calculations in float. don't change the order of factors --> (adsCode/0x7fffff) will always return 0
	return ( (float)adsCode * (2.0f * ads->vref) ) / ( ads->pga * 8388607.0f );  // 0x7fffff = 8388607.0f
}

uint8_t ADS125X_Register_Read(ADS125X_t *ads, uint8_t reg, uint8_t* pData, uint8_t n)
{
  uint8_t spiTx[2];
	spiTx[0] = ADS125X_CMD_RREG | reg; // 1st command byte
	spiTx[1] = n-1;                    // 2nd command byte = bytes to be read -1
	
  ADS125X_CS(ads, 1);
  ADS125X_DRDY_Wait(ads);
  HAL_SPI_Transmit(ads->hspix, spiTx, 2, 1);
  HAL_Delay(1); // t6 delay (50*tCLKIN)
  HAL_SPI_Receive(ads->hspix, pData, n, 1);
  HAL_Delay(1); // t11 delay
  ADS125X_CS(ads, 0);
	return 0;
}

uint8_t ADS125X_Register_Write(ADS125X_t *ads, uint8_t reg, uint8_t data)
{
	uint8_t spiTx[3];
	spiTx[0] = ADS125X_CMD_WREG | reg; // 1st command byte
	spiTx[1] = 0;                      // 2nd command byte = payload length = 1 bytes -1 = 0
	spiTx[2] = data;
	
  ADS125X_CS(ads, 1);
	ADS125X_DRDY_Wait(ads);
	HAL_SPI_Transmit(ads->hspix, spiTx, 3, 10);
	HAL_Delay(1);
  ADS125X_CS(ads, 0);
	return 0;
}

uint8_t ADS125X_CMD_Send(ADS125X_t *ads, uint8_t cmd)
{
  uint8_t spiTx = cmd;
	
  ADS125X_CS(ads, 1);
  ADS125X_DRDY_Wait(ads);
  HAL_SPI_Transmit(ads->hspix, &spiTx, 1, 1);
  ADS125X_CS(ads, 0);
	return 0;
}
